доделал по видосу промежуточное по обработки ошибок
промежуточное по валидации запроса

функция контроллера и сервиса логин
