# server/controllers/user-controller.js
@@ -1,10 +1,17 @@
-const UserService = require("../service/user-service");
+const userService = require("../service/user-service");
+const { validationResult } = require("express-validator");
+const ApiError = require("../exceptions/api-error.js");
 
 class UserController {
     async registration(req, res, next) {
         try {
+            const errors = validationResult(req);
+            if(!errors.isEmpty()) {
+                return next(ApiError.BadRequest("Validation error", errors.array()));
+            }
+
             const {email, password} = req.body;
-            const userData = await UserService.registration(email, password);
+            const userData = await userService.registration(email, password);
             res.cookie("refreshToken", userData.refreshToken, {
                 maxAge: 30 * 24 * 60 * 60 * 1000,
                 httpOnly: true
@@ -12,15 +19,23 @@ class UserController {
             return res.json(userData);
         }
         catch(e) {
-            console.log(e);
+            //console.log(e);
+            next(e);
         }
     }
     async login(req, res, next) {
         try {
-
+            const {email, password} = req.body;
+            const userData = await userService.login(email, password);
+            res.cookie("refreshToken", userData.refreshToken, {
+                maxAge: 30 * 24 * 60 * 60 * 1000,
+                httpOnly: true
+            });
+            return res.json(userData);
         }
         catch(e) {
             
+            next(e);
         }
     }
     async logout(req, res, next) {
@@ -29,15 +44,21 @@ class UserController {
         }
         catch(e) {
             
+            next(e);
         }
     }
     async activate(req, res, next) {
+        /*
         try {
-
+            const activationLink = req.params.link;
+            await userService.activate(activationLink);
+            return res.redirect(process.env.CLIENT_URL);
         }
-        catch(e) {
-            
+        catch (e) {
+            //console.log(e);
+            next(e);
         }
+        */
     }
     async refresh(req, res, next) {
         try {
@@ -45,6 +66,7 @@ class UserController {
         }
         catch(e) {
             
+            next(e);
         }
     }
     async getUsers(req, res, next) {
@@ -53,6 +75,7 @@ class UserController {
         }
         catch(e) {
             
+            next(e);
         }
     }
 }
